--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | BattleTanks</title>
+    <title>BattleTanks</title>
     <link rel="shortcut icon" href="static/favicon.ico">
     <link rel="stylesheet" href="static/style.css">
     <script src="static/UnityProgress.js"></script>  
     <script src="static/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "static/BT.json", {onProgress: UnityProgress});
+      var gameInstance = UnityLoader.instantiate("gameContainer", "static/Battle.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
